--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>ACME Hackathon</title>
+    <title>ACME World</title>
 
     <!-- Style sheets -->
     <link href="styles/bootstrap.css" rel="stylesheet" />
@@ -18,13 +18,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <span class="navbar-brand">IMSHealth</span>
+                    <span class="navbar-brand">ACME</span>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="#/teams">Home</a></li>
                         <li><a href="#/register">Register</a>
-                        <li><a href="#/edit/Punc">Edit</a></li>
                     </ul>
                 </div>
             </div>
